@@ -710,6 +710,7 @@ Andrew Svetlov
 Paul Swartz
 Thenault Sylvain
 Geoff Talvola
+Musashi Tamura
 William Tanksley
 Christian Tanzer
 Steven Taschuk
